--- a/app/views/bills/_list.html.erb
+++ b/app/views/bills/_list.html.erb
@@ -7,17 +7,18 @@
 
 <% content_tag :table do %>
   <% content_tag :tr do %>
-  <%= content_tag('th', t('bill.company')) %>
-  <%= content_tag('th', t('bill.date')) %>
-  <%= content_tag('th', t('bill.code')) %>
-  <th colspan='3'><%= t 'common_actions.actions' %></th>
+    <%= content_tag('th', t('bill.company')) %>
+    <%= content_tag('th', t('bill.date')) %>
+    <%= content_tag('th', t('bill.code')) %>
+    <%= content_tag('th', t('common_actions.actions'), options = {:colspan => 3}) %>
   <% end %>
 
   <% for bill in @bills %>
   <% content_tag :tr do %>
-    <%= content_tag('td', link_to(bill.company.name, '/companies/' + bill.company.id.to_s) ) rescue nil %>
+    <%= content_tag('td', link_to(bill.company.name, '/companies/' + bill.company.id.to_s),
+        options = {:nowrap => true} ) rescue nil %>
     <%= content_tag('td', bill.date.strftime("%d/%m/%Y")) %>
-    <%= content_tag('td', bill.code) %>
+    <%= content_tag('td', bill.code, options = {:nowrap => true}) %>
     <%= content_tag('td',link_to(t('common_actions.show'), bill)) %>
     <%= content_tag('td',link_to(t('common_actions.edit'), edit_bill_path(bill))) %>
     <%= content_tag('td',link_to(t('common_actions.destroy'), bill, :confirm => 'Are you sure?', :method => :delete)) %>
