--- a/app/views/cds/_list.html.erb
+++ b/app/views/cds/_list.html.erb
@@ -1,20 +1,21 @@
 <% content_tag :table do %>
   <% content_tag :tr do %>
   <%= content_tag('th', t('cds.model')) %>
-  <%= content_tag('th', t('cds.sn')) %>
+  <%= content_tag('th', t('cds.sn'), options = {:nowrap => true}) %>
   <%= content_tag('th', t('cds.mark')) %>
   <%= content_tag('th', t('cds.burn')) %>
   <%= content_tag('th', 'Pc') %>
   <%= content_tag('th', t('cds.bill')) %>
-  <th colspan='3'><%= t('common_actions.actions') %></th>
+  <%= content_tag('th', t('common_actions.actions'), options = {:colspan => 3}) %>
   <% end -%>
 <% for cd in @cds %>
   <tr  class="<%= cycle("rowA","rowB") %>">
-    <%= content_tag('td', cd.model) %>
-    <%= content_tag('td', cd.serialnumber) %>
-    <%= content_tag('td', cd.mark.name) rescue nil  %>
+    <%= content_tag('td', cd.model, options = {:nowrap => true}) %>
+    <%= content_tag('td', cd.serialnumber, options = {:nowrap => true}) %>
+    <%= content_tag('td', cd.mark.name, options = {:nowrap => true}) rescue nil  %>
     <%= content_tag('td', check(cd.writable)) %>
-    <%= content_tag('td', link_to(cd.computer.name , 'computers/' + cd.computer.id.to_s))  rescue nil %>
+    <%= content_tag('td', link_to(cd.computer.name , 'computers/' + cd.computer.id.to_s),
+        options = {:nowrap => true})  rescue nil %>
     <%= content_tag('td', link_to(t('cds.bill'), '/bills/'+ cd.bill_id.to_s)) %>
     <%= content_tag('td', link_to(t('common_actions.show'), cd )) %>
     <%= content_tag('td', link_to(t('common_actions.edit'), edit_cd_path(cd))) %>
