--- a/app/views/dvds/_list.html.erb
+++ b/app/views/dvds/_list.html.erb
@@ -1,20 +1,21 @@
 <% content_tag :table do %>
   <% content_tag :tr do %>
-    <%= content_tag('th', t('dvds.model')) %>
-    <%= content_tag('th', t('dvds.sn')) %>
+    <%= content_tag('th', t('dvds.model'), options = {:nowrap => true}) %>
+    <%= content_tag('th', t('dvds.sn'), options = {:nowrap => true}) %>
     <%= content_tag('th', t('dvds.mark')) %>
     <%= content_tag('th', t('dvds.burn')) %>
     <%= content_tag('th', 'Pc') %>
     <%= content_tag('th', t('dvds.bill')) %>
-    <th colspan='3'><%= t('common_actions.actions') %></th>
+    <%= content_tag('th', t('common_actions.actions'), options = {:colspan => 3}) %>
     <% end -%>
 <% for dvd in @dvds %>
   <tr  class="<%= cycle("rowA","rowB") %>">
-    <%= content_tag('td', dvd.model ) %>
-    <%= content_tag('td', dvd.serialnumber ) %>
-    <%= content_tag('td', dvd.mark.name) rescue nil %>
+    <%= content_tag('td', dvd.model, options = {:nowrap => true} ) %>
+    <%= content_tag('td', dvd.serialnumber, options = {:nowrap => true} ) %>
+    <%= content_tag('td', dvd.mark.name, options = {:nowrap => true}) rescue nil %>
     <%= content_tag('td', check(dvd.writable) ) %>
-    <%= content_tag('td', link_to(dvd.computer.name , 'computers/' + dvd.computer.id.to_s))  rescue nil %>
+    <%= content_tag('td', link_to(dvd.computer.name , 'computers/' + dvd.computer.id.to_s),
+        options = {:nowrap => true})  rescue nil %>
     <%= content_tag('td', link_to(t('computers.bill'), '/bills/'+ dvd.bill_id.to_s)) %>
     <%= content_tag('td', link_to(t('common_actions.show'), dvd )) %>
     <%= content_tag('td', link_to(t('common_actions.edit'), edit_dvd_path(dvd))) %>
