--- a/app/views/memories/_list.html.erb
+++ b/app/views/memories/_list.html.erb
@@ -1,21 +1,22 @@
 <% content_tag :table do %>
   <% content_tag :tr do %>
     <%= content_tag('th', t('memories.model')) %>
-    <%= content_tag('th', t('memories.sn')) %>
+    <%= content_tag('th', t('memories.sn'), options = {:nowrap => true}) %>
     <%= content_tag('th', t('memories.mark')) %>
-    <th colspan='2'><%= t('memories.size') %></th>
+    <%= content_tag('th', t('memories.size'), options = {:colspan => 2}) %>
     <%= content_tag('th', 'Pc') %>
     <%= content_tag('th', t('memories.bill')) %>
-    <th colspan='3'><%= t('common_actions.actions') %></th>
+    <%= content_tag('th', t('common_actions.actions'), options = {:colspan => 3}) %>
   <% end -%>
 <% for memory in @memories %>
   <tr  class="<%= cycle("rowA","rowB") %>">
-    <%= content_tag('td', memory.model) %>
-    <%= content_tag('td', memory.serialnumber) %>
-    <%= content_tag('td', memory.mark.name) rescue nil  %>
-    <%= content_tag('td', memory.size) rescue nil  %>
-    <%= content_tag('td', memory.unit.to_s) rescue nil  %>
-    <%= content_tag('td', link_to(memory.computer.name , 'computers/' + memory.computer.id.to_s))  rescue nil%>
+    <%= content_tag('td', memory.model, options = {:nowrap => true}) %>
+    <%= content_tag('td', memory.serialnumber, options = {:nowrap => true}) %>
+    <%= content_tag('td', memory.mark.name, options = {:nowrap => true}) rescue nil  %>
+    <%= content_tag('td', memory.size, options = {:nowrap => true}) rescue nil  %>
+    <%= content_tag('td', memory.unit.to_s, options = {:nowrap => true}) rescue nil  %>
+    <%= content_tag('td', link_to(memory.computer.name , 'computers/' +
+        memory.computer.id.to_s), options = {:nowrap => true})  rescue nil%>
     <%= content_tag('td', link_to(t('memories.bill'), '/bills/'+ memory.bill_id.to_s)) %>
     <%= content_tag('td', link_to(t('common_actions.show'), memory)) %>
     <%= content_tag('td', link_to(t('common_actions.edit'), edit_memory_path(memory))) %>
