--- a/app/views/mother_boards/_list.html.erb
+++ b/app/views/mother_boards/_list.html.erb
@@ -1,19 +1,20 @@
 <% content_tag :table do %>
   <% content_tag :tr do %>
     <%= content_tag('th',t('motherboards.model')) %>
-    <%= content_tag('th',t('motherboards.sn')) %>
+    <%= content_tag('th',t('motherboards.sn'), options = {:nowrap => true}) %>
     <%= content_tag('th',t('motherboards.mark')) %>
     <%= content_tag('th','Pc') %>
     <%= content_tag('th', t('motherboards.bill')) %>
-    <th colspan='3'><%= t('common_actions.actions') %></th>
+    <%= content_tag('th', t('common_actions.actions'), options = {:colspan => 3}) %>
    <% end -%>
 
    <% for mother_board in @mother_boards %>
      <tr  class="<%= cycle("rowA","rowB") %>">
-       <%= content_tag('td',mother_board.model) %>
-       <%= content_tag('td',mother_board.serialnumber) %>
-       <%= content_tag('td',mother_board.mark.name) rescue nil  %>
-       <%= content_tag('td',link_to(mother_board.computer.name , '/computers/' + mother_board.computer.id.to_s))  rescue nil%>
+       <%= content_tag('td',mother_board.model, options = {:nowrap => true}) %>
+       <%= content_tag('td',mother_board.serialnumber, options = {:nowrap => true}) %>
+       <%= content_tag('td',mother_board.mark.name, options = {:nowrap => true}) rescue nil  %>
+       <%= content_tag('td',link_to(mother_board.computer.name , '/computers/' +
+           mother_board.computer.id.to_s), options = {:nowrap => true})  rescue nil%>
        <%= content_tag('td', link_to(t('motherboards.bill'), '/bills/'+ mother_board.bill_id.to_s)) %>
        <%= content_tag('td', link_to(t('common_actions.show'), mother_board)) %>
        <%= content_tag('td', link_to(t('common_actions.edit'), edit_mother_board_path(mother_board))) %>
