--- a/app/views/pages/_list.html.erb
+++ b/app/views/pages/_list.html.erb
@@ -2,12 +2,12 @@
   <% content_tag :tr do %>
     <%= content_tag('th', 'Name') %>
     <%= content_tag('th', 'Permalink') %>
-    <th colspan='3'><%= t 'common_actions.actions' %></th>
+    <%= content_tag('th', t('common_actions.actions'), options = {:colspan => 3}) %>
   <% end -%>
   <% for page in @pages %>
     <tr  class="<%= cycle("rowA","rowB") %>">
-      <%= content_tag('td', page.name) %>
-      <%= content_tag('td', page.permalink) %>
+      <%= content_tag('td', page.name, options = {:nowrap => true}) %>
+      <%= content_tag('td', page.permalink, options = {:nowrap => true}) %>
       <%= content_tag('td', link_to('Show', page)) %>
       <%= content_tag('td', link_to('Edit', edit_page_path(page))) %>
       <%= content_tag('td', link_to('Destroy', page, :confirm => 'Are you sure?', :method => :delete)) %>
