--- a/app/views/printers/_list.html.erb
+++ b/app/views/printers/_list.html.erb
@@ -1,21 +1,22 @@
 <% content_tag :table do %>
   <% content_tag :tr do %>
     <%= content_tag('th', t('printers.model')) %>
-    <%= content_tag('th', t('printers.sn')) %>
+    <%= content_tag('th', t('printers.sn'), options = {:nowrap => true}) %>
     <%= content_tag('th', t('printers.mark')) %>
     <%= content_tag('th', 'Place') %>
     <%= content_tag('th', t('printers.workstation?')) %>
-    <%= content_tag('th', t('printers.inventory_register')) %>
+    <%= content_tag('th', t('printers.inventory_register'), options = {:nowrap => true}) %>
     <%= content_tag('th', t('screens.bill')) %>
-    <th colspan='3'><%= t('common_actions.actions') %></th>
-    <% end %>
+    <%= content_tag('th', t('common_actions.actions'), options = {:colspan => 3}) %>
+  <% end %>
 
 <% for printer in @printers %>
   <tr  class="<%= cycle("rowA","rowB") %>">
-    <%= content_tag('td', printer.model) %>
-    <%= content_tag('td', printer.serialnumber) %>
-    <%= content_tag('td', printer.mark.name) rescue nil  %>
-    <%= content_tag('td', link_to(printer.place.title, '/places/' + printer.place.id.to_s)) rescue nil%>
+    <%= content_tag('td', printer.model, options = {:nowrap => true}) %>
+    <%= content_tag('td', printer.serialnumber, options = {:nowrap => true}) %>
+    <%= content_tag('td', printer.mark.name, options = {:nowrap => true}) rescue nil  %>
+    <%= content_tag('td', link_to(printer.place.title, '/places/' + printer.place.id.to_s),
+        options = {:nowrap => true}) rescue nil%>
     <%= content_tag('td', in_workstation?(printer, 'printer_id' )) rescue nil %>
     <%= content_tag('td', printer.inventory_register) %>
     <%= content_tag('td', link_to( t('printers.bill'), '/bills/'+ printer.bill_id.to_s)) %>
