--- a/app/views/screens/_list.html.erb
+++ b/app/views/screens/_list.html.erb
@@ -1,20 +1,21 @@
 <% content_tag :table do %>
   <% content_tag :tr do %>
     <%= content_tag('th', t('screens.model')) %>
-    <%= content_tag('th', t('screens.sn')) %>
+    <%= content_tag('th', t('screens.sn'), options = {:nowrap => true}) %>
     <%= content_tag('th', t('screens.mark')) %>
     <%= content_tag('th', 'Place') %>
     <%= content_tag('th', t('screens.workstation?')) %>
-    <%= content_tag('th', t('screens.inventory_register')) %>
+    <%= content_tag('th', t('screens.inventory_register'), options = {:nowrap => true}) %>
     <%= content_tag('th', t('screens.bill')) %>
-    <th colspan='3'><%= t('common_actions.actions') %></th>
+    <%= content_tag('th', t('common_actions.actions'), options = {:colspan => 3}) %>
   <% end -%>
   <% for screen in @screens %>
    <tr  class="<%= cycle("rowA","rowB") %>">
-    <%= content_tag('td', screen.model) %>
-    <%= content_tag('td', screen.serialnumber) %>
-    <%= content_tag('td', screen.mark.name) rescue nil  %>
-    <%= content_tag('td', link_to(screen.place.title, '/places/' + screen.place.id.to_s) ) rescue nil %>
+    <%= content_tag('td', screen.model, options = {:nowrap => true}) %>
+    <%= content_tag('td', screen.serialnumber, options = {:nowrap => true}) %>
+    <%= content_tag('td', screen.mark.name, options = {:nowrap => true}) rescue nil  %>
+    <%= content_tag('td', link_to(screen.place.title, '/places/' + screen.place.id.to_s),
+        options = {:nowrap => true} ) rescue nil %>
     <%= content_tag('td', in_workstation?(screen, 'screen_id')) rescue nil%>
     <%= content_tag('td', screen.inventory_register) %>
     <%= content_tag('td', link_to(t('screens.bill'), '/bills/'+ screen.bill_id.to_s)) %>
