--- a/app/views/marks/_list.html.erb
+++ b/app/views/marks/_list.html.erb
@@ -1,14 +1,14 @@
-<table>
-  <tr>
-    <th><%= t('marks.mark') %></th>
-    <th colspan='3' width='100px'><%= t('common_actions.actions') %></th>
-  </tr>
+<% content_tag :table do %>
+  <% content_tag :tr do %>
+    <%= content_tag('th', t('marks.mark')) %>
+    <%= content_tag('th', t('common_actions.actions'), options = {:colspan => 3}) %>
+  <% end %>
 <% for mark in @marks %>
   <tr  class="<%= cycle("rowA","rowB") %>">
-    <td><%= mark.name %></td>
-    <td><%= link_to t('common_actions.show'), mark %></td>
+    <%= content_tag('td', mark.name) %>
+    <%= content_tag('td', link_to(t('common_actions.show'), mark)) %>
     <td><%= link_to t('common_actions.edit'), edit_mark_path(mark) %></td>
     <td><%= link_to t('common_actions.destroy'), mark, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
-</table>
+<% end %>
