- Controller   * added method to generate hexadecimal color in application     controller   * added methods to generate statistics graph in bills module   * little changes in places controllers
- Views and partials
  * added view stats in bills module
  * added new menu option for stats in bills module

- Routes
  * added new route for stats in bills module

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -126,6 +126,7 @@
         <ul class="sub">
           <li><a href="/bills/"><%= t 'menu.bills' %></a></li>
           <li><a href="/bills/new"><%= t 'menu.bill_new' %></a></li>
+          <li><a href="/bills/stats"><%= t 'menu.stats_places' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
