- Controller   * changed background color in stats graph of computers
- Views
  * refactoring

--- a/app/views/computers/stats.html.erb
+++ b/app/views/computers/stats.html.erb
@@ -19,10 +19,16 @@
 <% end %>
 
 
-<a href="#" onclick="Effect.toggle('toggle_appear_pie_3d_graph', 'appear'); return false;">
-  <%= t('common_actions.show_hide') %></a>
-<div id='toggle_appear_pie_3d_graph' style='border: solid 1px #eee;' >
-<%= javascript_include_tag('swfobject') %>
-<%= @graph %>
-</div>
+<% content_tag :table do %>
+      <% content_tag :tr do %>
+        <% content_tag :td  do %>
+        <a href="#" onclick="Effect.toggle('toggle_appear_pie_3d_graph', 'appear'); return false;">
+          <%= t('common_actions.show_hide') %></a>
+        <div id='toggle_appear_pie_3d_graph' style='border: solid 1px #eee;' >
+          <%= javascript_include_tag('swfobject') %>
+          <%= @graph %>
+        </div>
+        <% end -%>
+      <% end -%>
+<% end -%>
 
