--- a/app/views/workstations/stats.html.erb
+++ b/app/views/workstations/stats.html.erb
@@ -1,5 +1,5 @@
 <%= advice( true, t('common_actions.hide_advice'),
- t('help_phrases.stats_in_place'))%>
+ t('help_phrases.stats_in_place'),'advice-a-hundred-percent', 'workstations')%>
 
 <div id="quarter" >
   <%= render :partial => 'places_selector' %>
