--- a/app/views/mother_boards/_list.html.erb
+++ b/app/views/mother_boards/_list.html.erb
@@ -12,10 +12,11 @@
      <tr  class="<%= cycle("rowA","rowB") %>">
        <%= content_tag('td',mother_board.model, options = {:nowrap => true}) %>
        <%= content_tag('td',mother_board.serialnumber, options = {:nowrap => true}) %>
-       <%= content_tag('td',mother_board.mark.name, options = {:nowrap => true}) rescue nil  %>
-       <%= content_tag('td',link_to(mother_board.computer.name , '/computers/' +
-           mother_board.computer.id.to_s), options = {:nowrap => true})  rescue nil%>
-       <%= content_tag('td', link_to(t('motherboards.bill'), '/bills/'+ mother_board.bill_id.to_s)) %>
+       <%= content_tag('td',mother_board.mark.name, options = {:nowrap => true})%>
+       <%= content_tag('td',mother_board.computer.nil? ? ' ': link_to(mother_board.computer.name , '/computers/' +
+           mother_board.computer.id.to_s), options = {:nowrap => true}) %>
+       <%= content_tag('td', mother_board.bill_id.nil? ? ' ' : link_to(t('motherboards.bill'),
+           '/bills/'+ mother_board.bill_id.to_s)) %>
        <%= content_tag('td', link_to(t('common_actions.show'), mother_board)) %>
        <%= content_tag('td', link_to(t('common_actions.edit'), edit_mother_board_path(mother_board))) %>
        <%= content_tag('td', link_to(link_to t('common_actions.destroy'), mother_board, :confirm => 'Are you sure?', :method => :delete)) %>
