--- a/app/views/memories/_list.html.erb
+++ b/app/views/memories/_list.html.erb
@@ -15,9 +15,9 @@
     <%= content_tag('td', memory.mark.name, options = {:nowrap => true}) %>
     <%= content_tag('td', memory.size, options = {:nowrap => true}) %>
     <%= content_tag('td', memory.unit.to_s, options = {:nowrap => true}) %>
-    <%= content_tag('td', memory.computer.nil? ? ' ': link_to(memory.computer.name , \
+    <%= content_tag('td', memory.computer.nil? ? '-': link_to(memory.computer.name , \
         'computers/' +  memory.computer.id.to_s), options = {:nowrap => true}) %>
-    <%= content_tag('td', memory.bill_id.nil? ? ' ' : link_to(t('memories.bill'), \
+    <%= content_tag('td', memory.bill_id.nil? ? '-' : link_to(t('memories.bill'), \
         '/bills/'+ memory.bill_id.to_s)) %>
     <%= content_tag('td', link_to(t('common_actions.show'), memory)) %>
     <%= content_tag('td', link_to(t('common_actions.edit'), edit_memory_path(memory))) %>
