--- a/app/views/screens/_list.html.erb
+++ b/app/views/screens/_list.html.erb
@@ -18,7 +18,7 @@
         options = {:nowrap => true} )%>
     <%= content_tag('td', in_workstation?(screen, 'screen_id')) rescue nil%>
     <%= content_tag('td', screen.inventory_register) %>
-    <%= content_tag('td', link_to(t('screens.bill'), '/bills/'+ screen.bill_id.to_s)) %>
+    <%= content_tag('td', screen.bill_id.nil? ? '-' : link_to(t('screens.bill'), '/bills/'+ screen.bill_id.to_s)) %>
     <%= content_tag('td', link_to(t('common_actions.show'), screen)) %>
     <%= content_tag('td', link_to(t('common_actions.edit'), edit_screen_path(screen))) %>
     <%= content_tag('td', link_to(t('common_actions.destroy'), screen, :confirm => 'Are you sure?', :method => :delete)) %>
