--- a/app/views/harddisks/_list.html.erb
+++ b/app/views/harddisks/_list.html.erb
@@ -13,9 +13,9 @@
   <tr  class="<%= cycle("rowA","rowB") %>">
     <%= content_tag('td',harddisk.model, options = {:nowrap => true}) %>
     <%= content_tag('td',harddisk.serialnumber, options = {:nowrap => true}) %>
-    <%= content_tag('td',harddisk.mark.nil? ? ' ' : harddisk.mark.name , options = {:nowrap => true})  %>
+    <%= content_tag('td',harddisk.mark.nil? ? '-' : harddisk.mark.name , options = {:nowrap => true})  %>
     <%= content_tag('td',harddisk.size, options = {:nowrap => true}) rescue nil  %>
-    <%= content_tag('td',harddisk.unit.nil? ? '0' : harddisk.unit.to_s,
+    <%= content_tag('td',harddisk.unit.nil? ? '-' : harddisk.unit.to_s,
         options = {:nowrap => true})  %>
     <%= content_tag('td', link_to(harddisk.computer.name , 'computers/' +
         harddisk.computer.id.to_s), options = {:nowrap => true})  rescue nil%>
