--- a/app/views/screens/_list.html.erb
+++ b/app/views/screens/_list.html.erb
@@ -16,7 +16,7 @@
     <%= content_tag('td', screen.mark.name, options = {:nowrap => true})%>
     <%= content_tag('td', link_to(screen.place.title, '/places/' + screen.place.id.to_s),
         options = {:nowrap => true} )%>
-    <%= content_tag('td', in_workstation?(screen, 'screen_id')) rescue nil%>
+    <%= content_tag('td', in_workstation?(screen, 'screen_id')) %>
     <%= content_tag('td', screen.inventory_register) %>
     <%= content_tag('td', screen.bill_id.nil? ? '-' : link_to(t('screens.bill'), '/bills/'+ screen.bill_id.to_s)) %>
     <%= content_tag('td', link_to(t('common_actions.show'), screen)) %>
