--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -1,11 +1,6 @@
 <a href="#" onclick="Effect.toggle('toggle_appear_table_list_places', 'appear'); return false;">
   <%= t('common_actions.show_hide') %></a>
-<% content_tag :div, :id => 'right-content' do %>
-  <%= link_to t('common_actions.download'), :controller => 'places',
-  :action => 'xls_places' %> |
-  <%= link_to  t('common_actions.download_pdf'), :controller => 'places',
-  :action => 'pdf' %>
-<% end -%>
+  <%= render :partial => 'links_files_downloads' %>
 <% content_tag :div, :id => 'toggle_appear_table_list_places' do %>
     <% content_tag :h2 do %>
      <%= t('phrases.list_of') + t('menu.places').downcase %>
