--- a/app/views/printers/search.html.erb
+++ b/app/views/printers/search.html.erb
@@ -1,3 +1,7 @@
+<% content_tag :div, options = {:class => 'advice'} do %>
+  <%= content_tag('h4', flash[:notice]) %>
+<% end %>
+
 <%= render :partial => 'list' %>
 
 <br />
