--- a/app/views/printers/show.html.erb
+++ b/app/views/printers/show.html.erb
@@ -1,3 +1,12 @@
+<% content_tag :div, options = {:class => 'advice'} do %>
+  <%= content_tag('h4', flash[:notice]) %>
+<% end %>
+
+<%= content_tag('div', t('printers.model')) %> <%= @printer.model %>
+<%= content_tag('div', t('printers.mark')) %> <%= @printer.mark.name %>
+<%= content_tag('div', t('places.title')) %> <%= @printer.place.title %>
+
+<%= content_tag('br') %>
 
 <%= link_to t('common_actions.edit'), edit_printer_path(@printer) %> |
 <%= link_to t('common_actions.back'), printers_path %>
